エラーページを実装

--- a/app/views/facebookclones/new.html.erb
+++ b/app/views/facebookclones/new.html.erb
@@ -1,6 +1,6 @@
 <h1>投稿を作成</h1>
 
-<%= form_with(model: @facebookclones) do |form| %>
+<%= form_with(model: @facebookclone) do |form| %>
   <div class="content">
     <%= form.label :content %>
     <%= form.text_area :content %>
