画像投稿フォームを作成

--- a/app/views/facebookclones/index.html.erb
+++ b/app/views/facebookclones/index.html.erb
@@ -9,8 +9,8 @@
 <% @facebookclones.each do |facebookclone| %>
   <tr>
     <td><%= facebookclone.content %></td>
-    <%# <td><strong>Image:</strong>
-      <%= image_tag @facebookclone.image.url %>
+    <td><%= facebookclone.image %></td>
+    <%# <%= image_tag @facebookclone.image.url %>
     <td><%= link_to '見る', facebookclone_path(facebookclone.id) %></td>
     <td><%= link_to "編集する", edit_facebookclone_path(facebookclone.id), data: { confirm: '本当に編集していいですか？' } %></td>
     <td><%= link_to '削除する',  facebookclone_path(facebookclone.id),method: :delete, data: { confirm: '本当に削除していいですか？' }  %></td>
