--- a/app/views/facebookclones/new.html.erb
+++ b/app/views/facebookclones/new.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="field">
   <%= form.label :image %>
-  <%# <%= image_tag(facebookclone.image.url) if facebookclone.image && facebookclone.image.url %> 
+  <%# <%= image_tag(@facebookclone.image.url) if @facebookclone.image && @facebookclone.image.url%>
   <%= form.file_field :image %>
   <%= form.hidden_field :image_cache %>
 </div>
