--- a/app/views/facebookclones/show.html.erb
+++ b/app/views/facebookclones/show.html.erb
@@ -1,4 +1,4 @@
 <h1>詳細画面</h1>
 
 <p><%= @facebookclone.content %></p>
-<p><%= @facebookclone.image %></p>
+<p><%= image_tag @facebookclone.image.url %></p>
