確認画面を修正

--- a/app/views/facebookclones/confirm.html.erb
+++ b/app/views/facebookclones/confirm.html.erb
@@ -2,11 +2,13 @@
 <%= form_with(model: @facebookclone, url: facebookclones_path, local: true) do |form| %>
   <!-- 確認画面でアップロードした画像を表示させるための記述 -->
   <%= image_tag(@facebookclone.image.url) if @facebookclone.image && @facebookclone.image.url %>
+  <%= @facebookclone.content %>
   <%= form.hidden_field :image_cache %>
+  <%= form.hidden_field :content %>
   <%= form.submit "投稿する" %>
 <% end %>
 
-<%= form_with(model:@facebookclone, url:new_feed_path, local:true, method:"get") do |form| %>
+<%= form_with(model:@facebookclone, url:new_facebookclone_path, local:true, method:"get") do |form| %>
   <%= form.hidden_field :image_cache %>
   <%= form.submit "戻る", name: "back" %>
 <% end %>
